<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.musement.luisarturo.musement.CrearMomento">


    <TextView
        android:text="@string/crear_momento"
        android:textSize="28dp"
        android:id="@+id/TextViewCrearMomento"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/nombre"
        android:id="@+id/textViewTitulo"
        android:layout_below="@+id/TextViewCrearMomento"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextTitulo"
        android:layout_below="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="20dp"
        android:gravity="left"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/descripcion"
        android:id="@+id/textViewDesc"
        android:layout_below="@+id/editTextTitulo"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_below="@+id/textViewDesc"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/tiempo"
        android:id="@+id/textViewTime"
        android:layout_below="@+id/editTextDesc"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_below="@+id/textViewTime"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/aceptar"
        android:id="@+id/btnAceptar"
        android:textSize="25dp"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_alignBaseline="@+id/btnCancelar"
        android:layout_alignBottom="@+id/btnCancelar"
        android:layout_alignStart="@+id/editTextTime" />

    <Button
        android:text="@string/cancelar"
        android:id="@+id/btnCancelar"
        android:textSize="25dp"
        android:layout_marginTop="92dp"
        android:layout_marginLeft="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDesc"
        android:layout_alignEnd="@+id/editTextDesc" />

</RelativeLayout>
